# dynamic_generation

./: CMakeLists.txt  README.md  deletion.sh  generation.cpp  generation.hpp  generator.cpp  generator.hpp  insertion.cpp  insertion.sh  main.cpp  plot.m  plot.py  values.csv
